--- a/springcoreadvanced/pom.xml
+++ b/springcoreadvanced/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.bharath.spring</groupId>
-  <artifactId>springcore</artifactId>
+  <artifactId>springcoreadvanced</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>springcore</name>
+  <name>springcoreadvanced</name>
   <url>http://maven.apache.org</url>
 
-     <properties>
+  <properties>
         <springframework.version>4.3.6.RELEASE</springframework.version>
     </properties>
  
